# llm-tutor

./: .gitignore  COURSE_OUTLINE.md  README.md  app.js  index.html  pyproject.toml  styles.css
.github/workflows/: pages.yml
docs/: EXPERIMENT_REALISM_REDESIGN.md  WRITING_STYLE.md
reports/: capstone_report.md
scripts/: build_site.py  smoke_test.sh
site/: README.md  app.js  chapters-data.js  chapters.json  code-tools.js  index.html  styles.css
site/chapters/: 01_machine_learning_basics.html  08_lstm_gru.html  (+21 more)
tests/: test_attention.py  test_capstone.py  test_dpo.py  test_experiment_artifacts.py  test_foundations.py  test_gpt.py  test_gpt_loss_inspection.py  test_grpo.py  test_metrics.py  test_modern_attention.py  test_names_rnn.py  test_phase1_training.py  test_ppo.py  test_sampling.py  test_sft.py  test_site_build.py  test_transformer.py  test_translation_seq2seq.py  test_vision_cnn.py
tutorials/: 01_machine_learning_basics.md  02_loss_gradient_optimizer.md  03_pytorch_training_loop.md  04_neural_network_basics.md  05_training_neural_networks.md  06_cnn_image_classification.md  07_rnn_sequence_modeling.md  08_lstm_gru.md  09_seq2seq_translation.md  10_attention_seq2seq.md  11_self_attention_from_scratch.md  12_transformer_block.md  13_gpt_from_scratch.md  14_gpt_data_target_loss.md  15_mini_gpt_pretraining.md  16_sft_instruction_tuning.md  17_ppo_rlhf.md  18_dpo_preference_optimization.md  19_grpo_verifiable_tasks.md  20_capstone_mini_llm_pipeline.md  21_modern_llm_components.md  22_multimodal_vit_clip_vlm.md  23_diffusion_image_generation.md  README.md
(+51 files in other folders)
