[project]
name = "llm-tutor"
version = "0.1.0"
description = "从梯度下降到 GPT：面向大语言模型的动手教程"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "torch>=2.5",
  "torchvision>=0.27.1",
  "tqdm>=4.66",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
